IN PROGRESS - issue NEXUS-2388: Manual test migration plugin on nexus 1.3.6 https://issues.sonatype.org/browse/NEXUS-2388
git-svn-id: file:///opt/svn/repositories/sonatype.org/nexus-plugins/trunk/nexus-migration-plugin@319 c41184c3-3edd-4803-b646-023156917d6f